add /reset-password and /reset-password-set route

--- a/app/templates/emails/reset_password.html.twig
+++ b/app/templates/emails/reset_password.html.twig
@@ -1,8 +1,31 @@
-<h1>Bonjour! {{ user.username }} cliquer sur le lien pour réinitialiser votre mot de passe</h1>
+<style>
+    .button {
+        background-color: #04AA6D; /* Green */
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+    }
+</style>
+
+<h1>Bonjour {{ user.username }}</h1>
 
 <p>
-    Pour votre demande de réinitialisation de mot de passe, veuillez cliquer sur le lien suivant : <br><br>
-    <a href="{{ url|raw }}">{{ url|raw }}</a>.
+    Tu as oublié ton mot de passe ?
+    Nous avons reçu une demande pour réinitialisé le mot de passe de ton compte.
+</p>
+
+<p>
+    Pour réinitialiser ton mot de passe clique sur le boutton suivant : <br>
+    <a class="button" href="{{ url|raw }}">Réinitialiser mon mot de passe</a>.
+</p>
+
+<p>
+    Ou copie et colle l'URL suivant dans le navigateur : <br>
+    {{ url|raw }}
 </p>
 
 <p>Merci</p>
