add css for font to html mails templates

--- a/app/templates/emails/reset_password.html.twig
+++ b/app/templates/emails/reset_password.html.twig
@@ -1,4 +1,8 @@
 <style>
+    .body {
+        font-family: Arial, sans-serif;
+    }
+
     .button {
         background-color: #04AA6D; /* Green */
         border: none;
@@ -11,21 +15,23 @@
     }
 </style>
 
-<h1>Bonjour {{ user.username }}</h1>
+<div class="body">
+    <h1>Bonjour {{ user.username }}</h1>
 
-<p>
-    Tu as oublié ton mot de passe ?
-    Nous avons reçu une demande pour réinitialisé le mot de passe de ton compte.
-</p>
+    <p>
+        Tu as oublié ton mot de passe ?
+        Nous avons reçu une demande pour réinitialisé le mot de passe de ton compte.
+    </p>
 
-<p>
-    Pour réinitialiser ton mot de passe clique sur le boutton suivant : <br>
-    <a class="button" href="{{ url|raw }}">Réinitialiser mon mot de passe</a>.
-</p>
+    <p>
+        Pour réinitialiser ton mot de passe clique sur le boutton suivant : <br>
+        <a class="button" href="{{ url|raw }}">Réinitialiser mon mot de passe</a>.
+    </p>
 
-<p>
-    Ou copie et colle l'URL suivant dans le navigateur : <br>
-    {{ url|raw }}
-</p>
+    <p>
+        Ou copie et colle l'URL suivant dans le navigateur : <br>
+        {{ url|raw }}
+    </p>
 
-<p>Merci</p>
+    <p>Merci</p>
+</div>
