--- a/app/templates/emails/invit_to_event.html.twig
+++ b/app/templates/emails/invit_to_event.html.twig
@@ -1,19 +1,15 @@
 <style>
-    .button {
-        background-color: #04AA6D; /* Green */
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
+    .body {
+        font-family: Arial, sans-serif;
     }
 </style>
 
-<h1>Bonjour {{ receiverUser.username }} !</h1>
-<p>
-    Tu as été invité a l'évènement {{ event.name }} par {{ sendUser.username }}
-    Si tu souhaite participé clique sur le lien {{ url|raw }}
-</p>
-<p>Merci</p>
+<div class="body">
+    <h1>Bonjour {{ receiverUser.username }} !</h1>
+    <p>
+        Tu as été invité a l'évènement {{ event.name }} par {{ sendUser.username }}.
+        Si tu souhaite participé clique sur le lien {{ url|raw }}
+        Ce lien sera valable une semaine
+    </p>
+    <p>Merci</p>
+</div>
