fix type in invit_to_event.html.twig

--- a/app/templates/emails/invit_to_event.html.twig
+++ b/app/templates/emails/invit_to_event.html.twig
@@ -8,7 +8,7 @@
     <h1>Bonjour {{ receiverUser.username }} !</h1>
     <p>
         Tu as été invité a l'évènement {{ event.name }} par {{ sendUser.username }}.
-        Si tu souhaite participé clique sur le lien {{ url|raw }}
+        Si tu souhaites participer clique sur le lien {{ url|raw }} <br>
         Ce lien sera valable une semaine
     </p>
     <p>Merci</p>
