--- a/app/templates/emails/reset_password.html.twig
+++ b/app/templates/emails/reset_password.html.twig
@@ -24,9 +24,9 @@
     </p>
 
     <p>
-        Pour réinitialiser ton mot de passe clique sur le boutton suivant : <br>
-        <a class="button" href="{{ url|raw }}">Réinitialiser mon mot de passe</a>.
+        Pour réinitialiser ton mot de passe clique sur le boutton suivant :
     </p>
+    <a class="button" href="{{ url|raw }}">Réinitialiser mon mot de passe</a>
 
     <p>
         Ou copie et colle l'URL suivant dans le navigateur : <br>
