add remove invitatiion on delete user to invit

--- a/app/templates/emails/confirmation_inscription.html.twig
+++ b/app/templates/emails/confirmation_inscription.html.twig
@@ -8,7 +8,7 @@
     <h1>Bonjour {{ user.username }} !</h1>
     <p>
         Merci d'avoir créé un compte sur l'application Secret Santa !<br>
-        Pour te connecter clique sur le lien suivant <br> <a href="{{ url|raw }}">Connection</a> <br>
+        Pour te connecter clique sur le lien suivant <br> <a href="{{ url|raw }}">Connexion</a> <br>
     </p>
     <p>Merci</p>
 </div>
